# flatdraw

./: README.md  pyproject.toml
examples/berlin/: berlin.lp
examples/circle_big/: circle_big.lp
examples/crossing/: crossing.lp
examples/sisyphos/: sisyphos.lp
src/flatdraw/: __main__.py
src/flatdraw/convert/: __init__.py  clingo.py  color.py  image.py  map.py  track.py  utils.py
src/flatdraw/interactive/: main.py
src/flatdraw/interactive/static/scripts/: main.js
src/flatdraw/interactive/static/style/: main.css  map.css  spinners.css
src/flatdraw/interactive/static/style/page/: editor.css  index.css
src/flatdraw/interactive/templates/: base.html  editor.html  index.html
src/interactive/: index.html
src/interactive/static/scripts/: main.js
src/interactive/static/style/: map.css
